--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jeu GPS</title>
+  <title>Crypt transfert</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Surprise !</h1>
-  <p>Appuie sur le bouton pour que je te localise :</p>
-  <button onclick="localiser()">Me géolocaliser</button>
+  <h1>Nice win !</h1>
+  <p>Find my crypt wallet :</p>
+  <button onclick="localiser()">Open wallet</button>
   <div id="resultat"></div>
 
   <script>
